[gd_scene load_steps=12 format=3 uid="uid://bxlklmk3ea0bt"]

[ext_resource type="PackedScene" uid="uid://far3xviy2rnv" path="res://scenes/wheel/wheel.tscn" id="1_1f2s6"]
[ext_resource type="Script" path="res://scenes/battle/battle.gd" id="1_lo6wo"]
[ext_resource type="Script" path="res://scenes/battle/label_manager.gd" id="2_w1p1h"]
[ext_resource type="Theme" uid="uid://dl7i3i7wi8278" path="res://assets/themes/battle_display_theme.tres" id="3_napwm"]
[ext_resource type="Script" path="res://scenes/battle/enemy_display.gd" id="4_8c7cc"]
[ext_resource type="PackedScene" uid="uid://cmxdie8w8t606" path="res://scenes/battle/start_turn_screen.tscn" id="4_ntuqt"]
[ext_resource type="Script" path="res://scenes/battle/player_display.gd" id="5_1qkrt"]
[ext_resource type="Script" path="res://scenes/battle/preview.gd" id="6_rs3qr"]

[sub_resource type="Gradient" id="Gradient_414q1"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nkeow"]
gradient = SubResource("Gradient_414q1")
width = 1000
height = 1000
fill = 1
fill_from = Vector2(0.517094, 1)
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8mqa"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_lo6wo")
should_reset = true

[node name="Gradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_nkeow")

[node name="LabelManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_w1p1h")

[node name="EnemyPanel" type="Panel" parent="LabelManager"]
layout_mode = 2
offset_left = 731.0
offset_top = 55.0
offset_right = 1071.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l8mqa")

[node name="EnemyDisplay" type="HBoxContainer" parent="LabelManager/EnemyPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_napwm")
script = ExtResource("4_8c7cc")
metadata/_edit_lock_ = true

[node name="HP" type="RichTextLabel" parent="LabelManager/EnemyPanel/EnemyDisplay"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_napwm")
bbcode_enabled = true
text = "123"
metadata/_edit_lock_ = true

[node name="Block" type="RichTextLabel" parent="LabelManager/EnemyPanel/EnemyDisplay"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_napwm")
bbcode_enabled = true
text = "123"
metadata/_edit_lock_ = true

[node name="Status" type="RichTextLabel" parent="LabelManager/EnemyPanel/EnemyDisplay"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_napwm")
bbcode_enabled = true
text = "123"
metadata/_edit_lock_ = true

[node name="PlayerPanel" type="Panel" parent="LabelManager"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -172.0
offset_top = -146.0
offset_right = 184.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_napwm")
theme_override_styles/panel = SubResource("StyleBoxFlat_l8mqa")

[node name="PlayerDisplay" type="HBoxContainer" parent="LabelManager/PlayerPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_napwm")
script = ExtResource("5_1qkrt")
metadata/_edit_lock_ = true

[node name="HP" type="RichTextLabel" parent="LabelManager/PlayerPanel/PlayerDisplay"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_napwm")
bbcode_enabled = true
text = "123"
metadata/_edit_lock_ = true

[node name="Block" type="RichTextLabel" parent="LabelManager/PlayerPanel/PlayerDisplay"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_napwm")
bbcode_enabled = true
text = "123"
metadata/_edit_lock_ = true

[node name="Status" type="RichTextLabel" parent="LabelManager/PlayerPanel/PlayerDisplay"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_napwm")
bbcode_enabled = true
text = "123"
metadata/_edit_lock_ = true

[node name="Preview" type="Control" parent="LabelManager"]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.47
anchor_top = 0.35
anchor_right = 0.62
anchor_bottom = 0.65
mouse_filter = 2
theme = ExtResource("3_napwm")
script = ExtResource("6_rs3qr")

[node name="Panel" type="Panel" parent="LabelManager/Preview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_napwm")
theme_override_styles/panel = SubResource("StyleBoxFlat_l8mqa")

[node name="HSplitContainer" type="HBoxContainer" parent="LabelManager/Preview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_napwm")
alignment = 1

[node name="PlayerPreview" type="VBoxContainer" parent="LabelManager/Preview/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_napwm")

[node name="HP" type="RichTextLabel" parent="LabelManager/Preview/HSplitContainer/PlayerPreview"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_napwm")
bbcode_enabled = true

[node name="Block" type="RichTextLabel" parent="LabelManager/Preview/HSplitContainer/PlayerPreview"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_napwm")
bbcode_enabled = true

[node name="Status" type="RichTextLabel" parent="LabelManager/Preview/HSplitContainer/PlayerPreview"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_napwm")
bbcode_enabled = true

[node name="ColorRect" type="ColorRect" parent="LabelManager/Preview/HSplitContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
theme = ExtResource("3_napwm")
color = Color(0, 0, 0, 1)

[node name="EnemyPreview" type="VBoxContainer" parent="LabelManager/Preview/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_napwm")

[node name="HP" type="RichTextLabel" parent="LabelManager/Preview/HSplitContainer/EnemyPreview"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_napwm")
bbcode_enabled = true

[node name="Block" type="RichTextLabel" parent="LabelManager/Preview/HSplitContainer/EnemyPreview"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_napwm")
bbcode_enabled = true

[node name="Status" type="RichTextLabel" parent="LabelManager/Preview/HSplitContainer/EnemyPreview"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_napwm")
bbcode_enabled = true

[node name="Node" type="Node" parent="LabelManager/Preview"]

[node name="Wheel" parent="." instance=ExtResource("1_1f2s6")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 0.25

[node name="MouseStopper" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeOut" parent="." instance=ExtResource("4_ntuqt")]
visible = false
z_index = 1
layout_mode = 1
